k8s/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: packettoys-prod-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "packettoys-prod"
spec:
  backend:
    serviceName: hello-server
    servicePort: 8080
